--- a/StateManagement/_Imports.razor
+++ b/StateManagement/_Imports.razor
@@ -10,3 +10,5 @@
 @using StateManagement
 @using StateManagement.Shared
 @using StateManagement.Components
+@using Fluxor
+@using Fluxor.Blazor.Web.Components
