--- a/StateManagement/App.razor
+++ b/StateManagement/App.razor
@@ -1,3 +1,4 @@
+<Fluxor.Blazor.Web.StoreInitializer/>
 <Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
