add deep linking sample

--- a/StateManagement/Shared/NavMenu.razor
+++ b/StateManagement/Shared/NavMenu.razor
@@ -12,6 +12,7 @@
     <MudNavLink Href="cascading" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Cascading</MudNavLink>
     <MudNavLink Href="service" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Service (@ServiceCount)</MudNavLink>
     <MudNavLink Href="store" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Store (@(CounterState?.Value.Count ?? 0))</MudNavLink>
+    <MudNavLink Href="deeplinking/{cc18ad28-acee-4495-882c-ec4f56f5513b}" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Deep Linking</MudNavLink>
 </MudNavMenu>
 
 @code {
